# BasicsOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
